--- a/index.html
+++ b/index.html
@@ -1,10 +1,58 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Petru Octavian Raul</title>
+		<link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.red-orange.min.css" />
+		<link rel="stylesheet" href="css/styles.css">
+		<script async type="text/javascript" src="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.min.js"></script>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,700" />
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway:400,200" />
+		<meta content="chrome=1" http-equiv="X-UA-Compatible">
+		<meta name="apple-mobile-web-app-title" content="Raul Petru">
+		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Raul Petru's personal webpage.">
+		<title>Raul Petru</title>
 	</head>
-<body>
-	Welcome!
-	This site is under development.
-</body>
+	<body class="mdl-color--grey-900 mdl-color-text--grey-100">
+		<div class="mdl-grid">
+			<div class="mdl-cell mdl-cell--1-col mdl-cell--6-col-tablet"></div>
+			<div class="mdl-cell mdl-cell--2-col"></div>
+			<div class="mdl-cell mdl-cell--6-col" id="title" style="margin:0 auto;">
+				<span id="name">Raul Petru</span>
+				<hr />
+				<span id="desc">web design. android. stuff.</span>
+			</div>
+			<div class="mdl-cell mdl-cell--1-col mdl-cell--6-col-tablet"></div>
+			<div class="mdl-cell mdl-cell--2-col"></div>
+		</div>
+		<div class="mdl-grid">
+			<div class="mdl-cell mdl-cell--1-col mdl-cell--6-col-tablet"></div>
+			<div class="mdl-cell mdl-cell--2-col"></div>
+			<div class="mdl-cell mdl-cell--6-col" style="margin:0 auto;">
+				<div style="text-align:center; margin:30px;"><span class="mdl-color-text--grey-400 projects" style="font-family:'Raleway';font-size:30px;border: 1px solid #F5F5F5;padding:10px;">Projects</span></div>
+				<div class="mdl-card mdl-shadow--2dp">
+					<div class="mdl-card__title mdl-card--expand">
+						<h2 class="mdl-card__title-text">OnePlus X repository</h2>
+					</div>
+					<div class="mdl-card__supporting-text">
+						Repository with my creations for OnePlus X device.
+					</div>
+					<div class="mdl-card__actions mdl-card--border">
+						<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+						Coming soon
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="mdl-cell mdl-cell--1-col mdl-cell--6-col-tablet"></div>
+			<div class="mdl-cell mdl-cell--2-col"></div>
+		</div>
+		<footer class="mdl-mini-footer">
+		    <div class="mdl-mini-footer--left-section">
+		        <div class="mdl-logo">Contact: <a href="http://forum.xda-developers.com/member.php?u=4964524" target="_blank">XDA</a></div>
+		    </div>
+		</footer>	
+	</body>
 </html>
