Added a new project: Open GApps

--- a/index.html
+++ b/index.html
@@ -23,16 +23,29 @@
 				<span id="name">Raul Petru</span>
 				<hr />
 				<span id="desc">web design. android. stuff.</span>
+				<div style="text-align:center; margin-top:130px;margin-bottom:0px;"><span class="mdl-color-text--grey-400 projects" style="font-family:'Raleway';font-size:30px;border: 1px solid #F5F5F5;padding:10px;">Projects</span></div>
 			</div>
 			<div class="mdl-cell mdl-cell--1-col mdl-cell--6-col-tablet"></div>
 			<div class="mdl-cell mdl-cell--2-col"></div>
 		</div>
 		<div class="mdl-grid">
-			<div class="mdl-cell mdl-cell--1-col mdl-cell--6-col-tablet"></div>
 			<div class="mdl-cell mdl-cell--2-col"></div>
-			<div class="mdl-cell mdl-cell--6-col" style="margin:0 auto;">
-				<div style="text-align:center; margin:30px;"><span class="mdl-color-text--grey-400 projects" style="font-family:'Raleway';font-size:30px;border: 1px solid #F5F5F5;padding:10px;">Projects</span></div>
-				<div class="mdl-card mdl-shadow--2dp">
+			<div class="mdl-cell mdl-cell--4-col">
+				<div class="mdl-card mdl-shadow--2dp" id="card2">
+					<div class="mdl-card__title mdl-card--expand">
+					</div>
+					<div class="mdl-card__supporting-text">
+						Open GApps is a Google Apps package developed by writing buildscripts which allow for the automated creation of new up-to-date packages automatically. 
+					</div>
+					<div class="mdl-card__actions mdl-card--border">
+						<a href="http://opengapps.org/" target="_blank" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+						Visit now
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="mdl-cell mdl-cell--4-col">
+				<div class="mdl-card mdl-shadow--2dp" id="card1">
 					<div class="mdl-card__title mdl-card--expand">
 						<h2 class="mdl-card__title-text">OnePlus X repository</h2>
 					</div>
@@ -46,12 +59,11 @@
 					</div>
 				</div>
 			</div>
-			<div class="mdl-cell mdl-cell--1-col mdl-cell--6-col-tablet"></div>
 			<div class="mdl-cell mdl-cell--2-col"></div>
 		</div>
 		<footer class="mdl-mini-footer">
 		    <div class="mdl-mini-footer--left-section">
-		        <div class="mdl-logo">Contact: <a href="http://forum.xda-developers.com/member.php?u=4964524" target="_blank">XDA</a></div>
+		        <div class="mdl-logo">Contact: <a href="http://forum.xda-developers.com/member.php?u=4964524" target="_blank">XDA</a> <a href="https://github.com/raulx222" target="_blank">GitHub</a></div>
 		    </div>
 		</footer>	
 	</body>
