Favicon and some small changes

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.red-orange.min.css" />
 		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,700,100italic,100" />
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway:400,200" />
+		<link rel="icon" type="image/png" sizes="64x64" href="image/favicon.png">
 		<script async type="text/javascript" src="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.min.js"></script>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,700" />
-		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway:400,200" />
 		<meta content="chrome=1" http-equiv="X-UA-Compatible">
 		<meta name="apple-mobile-web-app-title" content="Raul Petru">
 		<meta name="mobile-web-app-capable" content="yes">
