Update GitHub profile URL
Updated the GitHub profile URL with the new GitHub account.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		</div>
 		<footer class="mdl-mini-footer">
 		    <div class="mdl-mini-footer--left-section">
-		        <div class="mdl-logo">Contact: <a href="http://forum.xda-developers.com/member.php?u=4964524" target="_blank">XDA</a> <a href="https://github.com/raulx222" target="_blank">GitHub</a></div>
+		        <div class="mdl-logo">Contact: <a href="http://forum.xda-developers.com/member.php?u=4964524" target="_blank">XDA</a> <a href="https://github.com/raulpetru" target="_blank">GitHub</a></div>
 		    </div>
 		</footer>	
 	</body>
