SVG logo, grid issues fixed

--- a/index.html
+++ b/index.html
@@ -17,21 +17,14 @@
 		<title>Raul Petru</title>
 	</head>
 	<body class="mdl-color--grey-900 mdl-color-text--grey-100">
-		<div class="mdl-grid">
-			<div class="mdl-cell mdl-cell--1-col mdl-cell--6-col-tablet"></div>
-			<div class="mdl-cell mdl-cell--2-col"></div>
-			<div class="mdl-cell mdl-cell--6-col" id="title" style="margin:0 auto;">
-				<span id="name">Raul Petru</span>
-				<hr />
-				<span id="desc">web design. android. stuff.</span>
+			<div id="title" style="margin:0 auto;">
+				<img id="logoimage" src="logo.svg"/>
 				<div style="text-align:center; margin-top:130px;margin-bottom:0px;"><span class="mdl-color-text--grey-400 projects" style="font-family:'Raleway';font-size:30px;border: 1px solid #F5F5F5;padding:10px;">Projects</span></div>
 			</div>
-			<div class="mdl-cell mdl-cell--1-col mdl-cell--6-col-tablet"></div>
-			<div class="mdl-cell mdl-cell--2-col"></div>
 		</div>
 		<div class="mdl-grid">
-			<div class="mdl-cell mdl-cell--2-col"></div>
-			<div class="mdl-cell mdl-cell--4-col">
+			<div class="mdl-cell mdl-cell--1-col"></div>
+			<div class="mdl-cell mdl-cell--5-col mdl-cell--8-col-tablet">
 				<div class="mdl-card mdl-shadow--2dp" id="card2">
 					<div class="mdl-card__title mdl-card--expand">
 					</div>
@@ -45,7 +38,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="mdl-cell mdl-cell--4-col">
+			<div class="mdl-cell mdl-cell--5-col mdl-cell--8-col-tablet">
 				<div class="mdl-card mdl-shadow--2dp" id="card1">
 					<div class="mdl-card__title mdl-card--expand">
 						<h2 class="mdl-card__title-text">OnePlus X repository</h2>
@@ -60,7 +53,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="mdl-cell mdl-cell--2-col"></div>
+			<div class="mdl-cell mdl-cell--1-col"></div>
 		</div>
 		<footer class="mdl-mini-footer">
 		    <div class="mdl-mini-footer--left-section">
